Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50206

Dialog popup on wrong screen when parent is ActiveX embedded

XMLWordPrintable

      I found an issue with dialog pop-ups from ActiveX embedded apps.

      When an application is embedded in another application using ActiveX (setControl on a AxWidget) it seems to have problems to show dialogs on the correct screen.

      If the application is started on screen != 0 the dialogs keep poping up on screen 0.

      I have attached a fairly simple example to demonstrate the issue. As I am using Visual Studio I am not sure if this QT based pro example compiles from start. I based the project files on the QT examples.

      The ActiveXWidget should be compiled and than the app should be registered (/regserver).

      The ActiveXApplication should be started and select the option embed application. From the new embedded application select the option to start a dialog.

      Small remark: programatically the ActiveXApplication start on screen 1 instead of 0! See mainWindow.setGeometry.

        1. 0001-Reproduce-QTBUG-50206-with-hierarchy-example.patch
          7 kB
          Friedemann Kleint
        2. ActiveXApplication.zip
          8 kB
          E.M. Stegehuis
        3. qtbug50206_activeqt_diag.diff
          1 kB
          Friedemann Kleint
        4. qtbug50206_diag.diff
          3 kB
          Friedemann Kleint
        5. qtbug50206.zip
          12 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            mstegehuis E.M. Stegehuis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes