testcon: Better adapt to High DPI screens.

Resize main window and select dialog according to
available screen size.

Task-number: QTBUG-50206
Change-Id: I66fa527dceb19fab87ac84ee3063f5b84e487fb4
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>